# konan-titanic-model

./: .dockerignore  .flake8  .gitignore  .konan.example  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  build.sh  pyproject.toml
.github/workflows/: docker.yml  quality.yml  release.yml
data/: metadata.yml
data/final/: test.csv  train.csv  val.csv
data/kaggle/: data_description.txt
titanic/: requirements.txt
titanic-model/src/app/: titanic_enums.py
titanic-model/src/playground/: data_preprocessing.py  file_handling.py  train.py  validate.py
titanic-model/src/serving/: main.py
titanic/src/app/: retrain.py  server.py  titanic_enums.py
titanic/src/playground/: data_preprocessing.py  file_handling.py  prepare.py  train.py  validate.py
titanic/src/playground/utils/: encoding.py  metrics.py  pipeline.py
titanic/src/serving/: .env.example  main.py
